<!--
  Copyright 2012 Google Inc.

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<resources>
    <string name="app_name" translatable="false">DashClock Widget</string>
    <string name="widget_label" translatable="false">DashClock</string>

    <string name="status_none" translatable="false">––</string>

    <string name="permission_desc_read_extension_data">Allows requesting DashClock extension data</string>
    <string name="permission_label_read_extension_data">Request DashClock extension data</string>

    <string name="settings">Settings</string>
    <string name="more_options">More options</string>

    <string name="simple_date_format">E, MMM dd</string>

    <!-- Configuration -->
    <string name="shortcut_label_configure">DashClock Settings</string>
    <string name="title_configure">Configure DashClock Widget</string>
    <string name="section_extensions">Extensions</string>
    <string name="section_appearance">Appearance</string>
    <string name="section_daydream">Daydream</string>
    <string name="section_advanced">Advanced</string>

    <string name="title_apps">Apps</string>
    <string name="title_shortcuts">Shortcuts</string>

    <string name="get_more_extensions">Get more extensions</string>
    <string name="add_another_extension">Add another extension</string>
    <string name="more_extensions">More extensions</string>
    <string name="done">Done</string>
    <string name="add_extension">Add an extension</string>
    <string name="cancel">Cancel</string>

    <!-- These strings never appear in release builds; translation is very low priority -->
    <string name="send_logs">Send debug log</string>
    <string name="send_logs_chooser_title">Send logs using</string>

    <string name="prev_date_style">Previous date style</string>
    <string name="prev_time_style">Previous time style</string>
    <string name="next_date_style">Next date style</string>
    <string name="next_time_style">Next time style</string>

    <string name="incompatible_extension_menu_template">%1$s (Incompatible)</string>
    <string name="incompatible_extension_title">Incompatible extension</string>
    <string name="incompatible_extension_message_search_play_template"><![CDATA[The
        <b>%1$s</b> extension is incompatible with this version of DashClock.
        Look for an update to the extension on Google Play?]]></string>
    <string name="search_play">Find on Google Play</string>

    <!-- About -->
    <string name="close">Close</string>
    <string name="about">About</string>

    <string name="app_name_and_version" translatable="false"><![CDATA[
        <b>DashClock</b>&nbsp;<font color="#888888">v%1$s</font>
    ]]></string>
    <string name="about_body"><![CDATA[
        <a href="http://m.google.com/utos">Terms of Service</a>
        &nbsp;&nbsp;&middot;&nbsp;&nbsp;
        <a href="http://www.google.com/policies/privacy/">Privacy Policy</a><br>
        <a href="https://code.google.com/p/dashclock/">DashClock by Roman Nurik</a>
        &nbsp;&nbsp;&middot;&nbsp;&nbsp;<br><br>
        <a href="http://teamsourcery.com/">Modified by TeamSourcery</a><br>
        By the Magic Man JohnnyB15613<br>
       <a href="http://teamsourcery.com/phpBB3/index.php">Made for JBSourcery</a><br><br><br>
        Many thanks to these open source tools:<br>
        <b><a href="http://www.androidicons.com/">Android Developer Icons</a></b><br>
        <i>by Günther Beyer of <a href="http://www.opoloo.com/">Opoloo</a></i><br><br>
        <b><a href="https://github.com/bauerca/drag-sort-listview">DragSortListView</a></b><br>
        <i>by Carl A. Bauer</i>        
    ]]></string>

    <!-- Weather -->
    <string name="weather_extension_title">Weather</string>
    <string name="weather_extension_description">
        Displays the latest weather information around you, including current temperature and
        conditions, as well as forecast information. Powered by Yahoo! Weather.
    </string>
    <string name="title_weather_settings">Weather Extension Settings</string>
    <string name="temperature_template">%1$s°</string>
    <string name="weather_expanded_title_template" translatable="false">%1$s — %2$s</string>
    <string name="later_forecast_template">Later: %1$s</string>
    <string name="no_weather_data">No weather data available</string>
    <string name="no_location_data">Your location could not be determined</string>

    <!-- Gmail -->
    <string name="gmail_extension_title">Gmail</string>
    <string name="gmail_extension_description">
        Displays an unread count for your Gmail inbox or priority inbox.
    </string>
    <string name="title_gmail_settings">Gmail Extension Settings</string>
    <plurals name="gmail_title_template">
        <item quantity="other">%1$d unread</item>
    </plurals>

    <!-- Next alarm -->
    <string name="next_alarm_extension_title">Next alarm</string>
    <string name="next_alarm_extension_description">
        Displays information about the next scheduled alarm, if you have one set.
    </string>
    <string name="next_alarm">Next alarm</string>

    <!-- Calendar -->
    <string name="calendar_extension_title">Calendar appointment</string>
    <string name="calendar_extension_description">
        Displays information about your next calendar appointment, if one is scheduled within
        the next few hours.
    </string>
    <string name="title_calendar_settings">Calendar Extension Settings</string>
    <string name="calendar_with_location_template" translatable="false">%1$s — %2$s</string>
    <plurals name="calendar_template_days">
        <item quantity="one">%1$s day</item>
        <item quantity="other">%1$s days</item>
    </plurals>
    <plurals name="calendar_template_hours">
        <item quantity="one">%1$s hr</item>
        <item quantity="other">%1$s hrs</item>
    </plurals>
    <plurals name="calendar_template_mins">
        <item quantity="other">%1$s min</item>
    </plurals>
    <string name="today">Today</string>
    <string name="now">Now</string>

    <!-- Missed calls -->
    <string name="missed_calls_extension_title">Missed calls</string>
    <string name="missed_calls_extension_description">
        Displays the number of missed calls and the names of callers you missed.
    </string>
    <plurals name="missed_calls_title_template">
        <item quantity="one">%1$s missed call</item>
        <item quantity="other">%1$s missed calls</item>
    </plurals>
    <string name="missed_calls_body_template">From: %1$s</string>
    <string name="missed_calls_unknown">Unknown</string>

    <!-- SMS + MMS -->
    <string name="sms_extension_title">Text messages</string>
    <string name="sms_extension_description">
        Displays the number of unread SMS and MMS conversations, along with sender names.
    </string>
    <plurals name="sms_title_template">
        <item quantity="one">%1$s unread conversation</item>
        <item quantity="other">%1$s unread conversations</item>
    </plurals>
    <string name="sms_body_template">From: %1$s</string>

    <!-- Welcome strings -->
    <string name="welcome_title">Customize your DashClock</string>
    <string name="welcome_description">Want to just see the current date and time? Then
        press the check mark above and you\'re set! But why not customize DashClock with a
        few <i>extensions</i>?
        \n\n<b>Extensions</b> show you relevant and timely information, right inside DashClock!
        Try them out by adding a few extensions below.
    </string>  
    
    <!-- Preferences -->
	<string name="pref_category_time_and_date">Time and Date Text Colors</string>
    <string name="timeAndDate_time">Time Text Color</string>
    <string name="timeAndDate_date">Date Text Color</string>
    
    <string name="pref_category_extension_expanded">Extension Expanded Text Colors</string>
    <string name="extensionExpanded_title">Expanded Title</string>
    <string name="extensionExpanded_title_summary">The Main Text</string>
    <string name="extensionExpanded_body">Expanded Body</string>
    <string name="extensionExpanded_body_summary">The Secondary Text</string>
    
    <string name="pref_category_extension_minimized">Extension Minimized Text Color</string>
    <string name="extensionMinimized_title">Notification Count</string>
    
    <string name="pref_category_extension_list">Settings List Text Colors</string>
    <string name="extensionList_title">Settings List Title</string>
    <string name="extensionList_title_summary">The Extension name</string>
    <string name="extensionList_body">Settings List Body</string>
    <string name="extensionList_body_summary">The text that explains what the Extension does</string>
    
    <string name="color_options">Change Widget Colors</string>
    <string name="prefs_reset">Reset All Colors To Stock</string>
    
    <!-- Color Picker -->
    <string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Press on Color to apply</string>
    <string name="arrow_right">→</string>
    <string name="arrow_down">↓</string>
    <string name="hex">Hex:</string>
    <string name="hex_hint">#FF000000</string>
    <string name="ics_color">Holo</string>
    <string name="set">Set</string>
    <string name="bp_theme_button">BP Theme Color</string>
    <string name="bp_text1_button">BP Text Color 1</string>
    <string name="bp_text2_button">BP Text Color 2</string>
</resources>
